--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
       </h4>
     </div>
 
+    <div class="box">
+      <h4>
+        Pouvez-vous faire apparaître trois magiciens célèbres ?<br />
+        (<em>Astuce : ils se reposent souvent en bas de la page)</em>
+      </h4>
+    </div>
+
+    <nav>
+      <ul>
+        <li>Harry Houdini</li>
+        <li>David Copperfield</li>
+        <li>Harry Potter</li>
+      </ul>
+    </nav>
+
     <script src="index.js"></script>
   </body>
 </html>
