--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
       </h4>
     </div>
 
+    <form class="box">
+      <input type="text" id="name" />
+
+      <select>
+        <option>Sélectionnez la planète que vous aimeriez visiter</option>
+        <option>Vénus</option>
+        <option>Mars</option>
+        <option>Pluton</option>
+      </select>
+
+      <input type="checkbox" id="cgv" />
+      <label for="cgv">Accepter les CGV</label><br /><br />
+
+      <input type="submit" value="Valider" />
+      <div id="recap"></div>
+    </form>
+
     <nav>
       <ul>
         <li>Harry Houdini</li>
