--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <option>Vénus</option>
         <option>Mars</option>
         <option>Pluton</option>
+        <option>Coruscant</option>
       </select>
 
       <input type="checkbox" id="cgv" />
