--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <form class="box">
-      <input type="text" id="name" />
+      <input type="text" id="name" placeholder="Entrez votre nom" />
 
       <select>
         <option>Sélectionnez la planète que vous aimeriez visiter</option>
