structuration en pages

--- a/page2.html
+++ b/page2.html
@@ -6,21 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="./styles.css" />
-    <title>Page 1</title>
+    <title>Page 2</title>
   </head>
 
   <body>
-    <div class="click-event box">
-      <h4>Quelle est la capitale du Japon ?</h4>
-      <button id="btn--1">Rome</button>
-      <button id="btn--2">Tokyo</button>
-      <p>La bonne réponse est Tokyo</p>
+    <div class="keypress box">
+      <h4>
+        Quelles lettres sont des voyelles ?<br /><br />
+        Vous appuyez sur :
+        <span id="key"></span>
+      </h4>
     </div>
 
     <div class="box">
-      <a href="./page2.html">Page 2</a>
+      <a href="./index.html">Retour</a>
+      <a href="./page3.html">Page 3</a>
     </div>
 
-    <script src="index.js"></script>
+    <script src="page2.js"></script>
   </body>
 </html>
