--- a/page5.html
+++ b/page5.html
@@ -33,6 +33,7 @@
 
     <div class="box">
       <a href="./page4.html">Retour</a>
+      <a href="./page6.html">Page 6</a>
     </div>
 
     <script src="./page5.js"></script>
